# hybridbot

./: .gitignore  CMakeLists.txt  DYNAMIC_FEATURES.md  README.md  at.txt  docker-compose.dynamic.yml  docker-compose.frontend.yml  frontend-react-example.tsx  ml.md  redis-endpoint.txt  redis-integration-update.txt  redis-kommunikation-analyse.md  redis-slave.conf  redis.txt  setup-redis-slave.sh  start-dynamic-system.sh
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.yfinance  README.md  RELEASE_NOTES.md  ai_prediction_pipeline.py  at.txt  backend.txt  dashboard_api.py  docker-compose.yml  event_driven_system.py  grok_top_stocks.py  init.sql  ml.md  multi_api_enhanced_service.py  realtime_analytics.py  realtime_trading_engine.py  redis-endpoints.txt  requirements.txt  update_missing_endpoints.py  worker.py  yfinance_enhanced_service.py  yfinance_service.py
backend/autogluon_model/: learner.pkl  metadata.json
backend/autogluon_model/models/: trainer.pkl
backend/autogluon_model_15/: learner.pkl  metadata.json
backend/autogluon_model_15/models/: trainer.pkl
backend/autogluon_model_30/: learner.pkl  metadata.json
backend/autogluon_model_30/models/: trainer.pkl
backend/autogluon_model_60/: learner.pkl
backend/autogluon_model_60/models/: trainer.pkl
backend/qml/: Main.qml  MainSimple.qml  MainStep1.qml  MainStep2.qml  MainStep3.qml  Theme.qml  qmldir
backend/qml/components/: CandleChart.qml  HeaderBar.qml  MarketList.qml  MyLabel.qml  SideNav.qml  StatusBadge.qml
backend/qt-frontend/: CMakeLists.txt  README.md  chartstab.cpp  chartstab.h  dashboardtab.cpp  dashboardtab.h  main.cpp  mainwindow.cpp  mainwindow.h  portfoliotab.cpp  portfoliotab.h  redisclient.cpp  redisclient.h  settingstab.cpp  settingstab.h  tradestab.cpp  tradestab.h
backend/scripts/: deploy.ps1
src/: AdvancedMain.qml  AutoTradingBackend-Fixed.js  AutoTradingBackend-Old.js  AutoTradingBackend-Optimized.js  AutoTradingBackend.js  AutoTradingInterface.qml  AutoTradingStart.html  Bootstrap-Test.html  CMakeLists.txt  ChartsView.qml  DashboardPage.qml  DashboardView.qml  DynamicChart.qml  FinalTradingApp.qml  GlassTile.qml  GrokPage.qml  GrokRecommendations.qml  HologramButton.qml  HologramTile.qml  HybridFallback.qml  HybridMain.qml  MLPage.qml  MLStatusPanel.qml  Main.qml  MinimalTrading.qml  PortfolioPage.qml  PortfolioView.qml  PremiumButton.qml  PremiumDashboard.qml  PremiumMain.qml  PremiumTile.qml  RedisTest.qml  SettingsPage.qml  SimpleDemo.qml  SimpleMain.qml  SimpleTrading.qml  StandaloneAdvanced.qml  TradesView.qml  TradingMonitor.html  TradingPage.qml  (+17 more)
(+49 files in other folders)
